Fix edit button icon alignment in events list

--- a/src/app/components/events-list/events-list.component.css
+++ b/src/app/components/events-list/events-list.component.css
@@ -99,6 +99,10 @@
   height: 24px;
   line-height: 24px;
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .edit-button mat-icon {
@@ -106,6 +110,19 @@
   width: 16px;
   height: 16px;
   line-height: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.edit-button .mat-mdc-button-touch-target {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
 
 .edit-button:hover {
